# trace-seal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: stage4-completion-report.md  v0.2-clean-windows-report.md  v0.3-release-prep-report.md  v0.3-release-report.md
bootstrap/: sitecustomize.py
dashboard/: __init__.py  export.py
docs/: README.md  dashboard-data-contract.md  dashboard-design.md  dashboard-guard-metadata.md  demo.md  feishu_project_doc.md  guard-event-import.md  guard-event-schema-contract.md  guard-health-prototype.md  guard-policy-dry-run.md  guard-process-spawn-dry-run.md  incident-examples.md  policy-rules.md  project-status.md  release-check-v0.2.0.md  release-notes-v0.2.0.md  release-verification-checklist.md  roadmap.md  rust-core-parity-rfc.md  slint-desktop-feasibility-rfc.md  slint-manual-smoke-test.md  slint-preview-artifact.md  spec.md  stage4-enforcement-experiment-rfc.md  stage4-issue-breakdown.md  stage4-rust-guard-design.md  stage4-rust-guard-rfc.md  test-report.md  windows-guard-smoke-validation.md  windows-install-troubleshooting.md
examples/: bad_agent_cascade_failure.py  bad_agent_delete.py  bad_agent_domain_policy.py  bad_agent_env.py  bad_agent_file_read.py  bad_agent_git.py  bad_agent_git_push_classification.py  bad_agent_git_state.py  bad_agent_http.py  bad_agent_http_cassette.py  bad_agent_httpx.py  bad_agent_os_system.py  bad_agent_policy_yaml.py  policy.yaml
minimizer/: __init__.py  explain.py
packaging/: traceseal_core_entry.py
(+159 files in other folders)
