[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-seal"
version = "0.2.0"
description = "TraceSeal MVP: operation recorder, safety policy, replay and explain for Python agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TraceSeal" }]
dependencies = ["httpx>=0.27,<1"]

[project.scripts]
traceseal = "traceseal.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["traceseal*", "sdk*", "recorder*", "replay*", "minimizer*", "policy*", "sandbox*", "dashboard*"]
exclude = ["runs*", "tests*", "examples*"]

[tool.setuptools.package-data]
policy = ["default_policy.json"]
